--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,27 @@
+html {
+  background-color: #03035b;
+  color: white;
+  height: 100%;
+}
+
 body {
-    font-family: 'Poppins', sans-serif;
-    background-color:black;
-    color: #F0EAD6;
-    
+    font-family: 'Poppins', sans-serif;   
+}
+
+main {
+    margin-top: 50px;
 }
 
 header {
     display: flex;
     align-items: center;
-    height: 80px;
-    width: 100%;
-    border-bottom: 1px solid #F0EAD6;
-    z-index: 5;
+    padding-left: 5px;
+    height: 60px;
+    width: 100%;    
 }
 
 nav {
-    margin-right: 10px;
+    margin-left: auto;
   }
   
   nav ul {
@@ -27,10 +33,12 @@ nav {
   nav ul li {
     padding: 10px;
     font-size: 20px;
+    font-weight: bold;
   }
   
   nav ul li a {
     text-decoration: none;
+    color:white;
   }
   
   nav ul li a:hover {
@@ -38,13 +46,86 @@ nav {
     text-decoration: underline;
     transition: font-size 0.15s ease-in;
   }
+  nav ul li a:visited {
+    color: white;
+  }
 
 #me {
-    height: 400px;
+    margin: 20px 30px 0 0;
+    width: 200px;
+    object-fit: contain;
+    align-self: flex-end;    
     border-radius: 50%;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+
 }
 
-.about {
+.about-container {
     display: flex;
-    
+    padding: 10px; 
+    width: 100%;;   
 }
+
+.about-text-container {
+    flex: 1 1 auto;
+    width: 40%;
+}
+
+header img {
+    max-height: 100%;
+    max-width: 45%;
+    display: block;
+}
+
+.projects-section {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+}
+
+.project {
+  background-color: rgb(233, 169, 51);
+  border-radius: 8px;
+  padding: 20px;
+}
+
+.project img {
+  width: 100%;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  transition: transform 0.3s ease;
+
+}
+
+.project h3 {
+  color: white;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.project a {
+  text-decoration: none;
+}
+
+.project h3:hover {
+  font-size: 20.5px;
+  text-decoration: underline;
+  transition: font-size 0.15s ease-in;
+}
+
+.project h3:visited {
+  color: white;  
+  text-decoration: none;
+}
+
+
+.project-summary {
+  margin-bottom: 10px;
+}
+
+.project-tech {
+  font-size: 14px;
+  color: #6c069f;
+}
+
+
